[package]
name = "poke_escape_server"
license = "GPL-3.0-or-later"
repository = "https://github.com/Kloenk/pokemon_escape_server"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"

[dependencies]
clap = {version = "2.33.0", features = ["color"]}
colored = "1.8.0"
semver = "0.9.0"
serde_json = "1.0.39"
serde = "1.0.92"
serde_derive = "1.0.93"
toml = "0.5.1"